--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <style>
       * {
         margin: 0;
+        padding: 0;
         box-sizing: border-box;
         font-family: "Roboto", sans-serif;
       }
